--- a/biblio.bib
+++ b/biblio.bib
@@ -362,3 +362,11 @@
     EPRINT = {https://mathoverflow.net/q/405400},
     URL = {https://mathoverflow.net/q/405400}
 }
+
+@book{buchanan1965calculus,
+  title={The calculus of consent: Logical foundations of constitutional democracy},
+  author={Buchanan, James M and Tullock, Gordon},
+  volume={100},
+  year={1965},
+  publisher={University of Michigan press}
+}
